# Python-Rag-Sample

./: .gitignore  README.md  pyproject.toml
Backend/app/: main.py
Backend/chroma/db800866-0e6d-4afb-b871-eb166b4a0536/: index_metadata.pickle
Frontend/: Dockerfile  package-lock.json
Frontend/next-app/: package.json
app/: db.py  main.py  processing.py
chroma/db800866-0e6d-4afb-b871-eb166b4a0536/: index_metadata.pickle
