[project]
name = "rag-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Minniti",email = "pminniti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "rag_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
